@@ -160,7 +160,7 @@ public final class SelfTeleport extends Skill {
             @SubscribeEvent
             public void onScroll(MouseScrollEvent event) {
                 distance += event.yOffset;
-                distance = Math.min(20, Math.max(0, distance));
+                distance = Math.clamp(distance, 0, 20);
                 event.setCanceled(true);
             }
 
